# ai-dev-tools-zoomcamp-homework

./: Dockerfile  render.yaml
02-end-to-end/: implementation-plan.md  openapi.yaml
02-end-to-end/online-coding-interview/: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  render.yaml  setup-deployment.sh
02-end-to-end/online-coding-interview/backend/: .env.example  Dockerfile  Dockerfile.render  pyproject.toml  requirements.txt
02-end-to-end/online-coding-interview/backend/app/: main.py  sockets.py
02-end-to-end/online-coding-interview/backend/app/api/: deps.py
02-end-to-end/online-coding-interview/backend/app/api/routes/: health.py  languages.py  proxy.py  sessions.py
02-end-to-end/online-coding-interview/backend/app/core/: config.py  database.py  redis.py  security.py
02-end-to-end/online-coding-interview/backend/app/models/: session.py
02-end-to-end/online-coding-interview/backend/app/schemas/: session.py
02-end-to-end/online-coding-interview/backend/app/services/: session.py
02-end-to-end/online-coding-interview/backend/tests/: conftest.py  test_languages.py  test_sessions.py
02-end-to-end/online-coding-interview/frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
02-end-to-end/online-coding-interview/frontend/src/: App.tsx  index.css
02-end-to-end/online-coding-interview/frontend/src/components/: PasswordModal.tsx
02-end-to-end/online-coding-interview/frontend/src/components/Editor/: CodeEditor.tsx
02-end-to-end/online-coding-interview/frontend/src/components/Output/: OutputPanel.test.tsx  OutputPanel.tsx
02-end-to-end/online-coding-interview/frontend/src/components/Toolbar/: Toolbar.test.tsx  Toolbar.tsx
02-end-to-end/online-coding-interview/frontend/src/components/UserPresence/: UserPresence.tsx
02-end-to-end/online-coding-interview/frontend/src/pages/: HomePage.test.tsx  HomePage.tsx  SessionPage.tsx
02-end-to-end/online-coding-interview/frontend/src/services/: api.ts  socket.ts
02-end-to-end/online-coding-interview/frontend/src/services/executor/: csharp-worker.ts  go-worker.ts  index.ts  java-worker.ts  javascript-worker.ts  python-worker.ts
02-end-to-end/online-coding-interview/frontend/src/store/: sessionStore.test.ts  sessionStore.ts
02-end-to-end/online-coding-interview/frontend/src/test/: setup.ts
02-end-to-end/online-coding-interview/frontend/src/types/: index.ts
02-end-to-end/online-coding-interview/tests/: initial-execution.spec.ts
02-end-to-end/prompts/: prompt-1.md  prompt-2.md
